# ZPR-Monitor-Zasobow

./: CMakeLists.txt  README.md  README.txt  ZPR_Monitor.cpp  config.cfg
Boost_tests/: CMakeLists.txt  test1.cpp
Config/: CMakeLists.txt  ConfigLoader.cpp  ConfigLoader.h
Managers/: CMakeLists.txt  ConditionManager.cpp  ConditionManager.h  PollManager.cpp  PollManager.h  ServerManager.cpp  ServerManager.h
Providers/: CMakeLists.txt  LinuxResProvider.cpp  LinuxResProvider.h  ResProvider.cpp  ResProvider.h  WinResProvider.cpp  WinResProvider.h
include/: json.h
